Image upload method modification